# cs-workshop

./: .gitignore  README.md
chainguard-libraries/: Dockerfile  deploy-nexus.sh  readme.md
chainguard-libraries/linky-libraries/: Dockerfile
containers-102/: README.md
containers-102/advanced/: Dockerfile.1  Dockerfile.2  Dockerfile.3  advanced.sh  run.py
containers-102/layers/: Dockerfile.1  layers.sh
containers-102/multistage/: Dockerfile.1  Dockerfile.3  Dockerfile.4  Dockerfile.5  copylink.sh
custom-assembly/: readme.md
custom-assembly/chainctl/: Dockerfile.ca  Dockerfile.original  python-ca-builder.yaml  python-ca-runtime.yaml
custom-assembly/iac/: README.md  demo.sh  postsubmit.sh  presubmit.sh
debugging-distroless/: cleanup.sh  k8s.sh  local.sh
dotnet/: readme.md
dotnet/linky/: Dockerfile  run-demo.sh
dotnet/not-linky/: Dockerfile  run-demo.sh
eol-grace-period/: demo.sh  readme.md
global-image-modifications/dockerfile/: README.md
global-image-modifications/ggcr/: .gitignore  go.mod  index.go
go/: README.md
go/linky/: Dockerfile  go.mod  main.go
go/linky-static/: Dockerfile  go.mod
go/not-linky/: Dockerfile  go.mod
golden-images/: README.md
image-mirror/: README.md
java/: README.md  java-demo.sh
keeping-up-with-latest/: README.md
migration-training/: Dockerfile-dev  Dockerfile-final  pyproject.toml
migration-training/tests/: test_main.py
node/: demo.sh  readme.md
private-apk-repo/: Dockerfile  readme.md
red-hat-ubi/: README.md
stigs/: demo.sh  readme.md  scan.sh
train-the-trainer/: README.md
ttt/: base.sh
(+185 files in other folders)
